[package]
name = "pyinpoly"
version = "0.4.0"
authors = ["mvonlanthen"]
edition = "2018"

[lib]
name = "pyinpoly"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.12"
ndarray = "0.13"
#inpolygon = { path = "../inpolygon" } when inpolygon is local
inpolygon = {git="https://github.com/mvonlanthen/inpolygon.git", branch="master"}

[dependencies.pyo3]
version = "0.12"
features = ["extension-module"]